tests/ui/terr-sorts.stderr
error[E0308]: mismatched types
  --> $DIR/terr-sorts.rs:10:14
   |
LL |     want_foo(b);
   |     -------- ^ expected `Foo`, found `Box<Foo>`
   |     |
   |     arguments to this function are incorrect
   |
   = note: expected struct `Foo`
              found struct `Box<Foo>`
note: function defined here
  --> $DIR/terr-sorts.rs:8:4
   |
LL | fn want_foo(f: Foo) {}
   |    ^^^^^^^^ ------
help: consider unboxing the value
   |
LL |     want_foo(*b);
   |              +

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
